# paper-graph-backend

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
paper_graph/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
paper_graph/migrations/: 0001_initial.py  0002_paper_paper_url.py
